--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,13 +62,39 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+    }
+    .hour-hand {
+      width: 25%;
+      left: 25%;
+    }
+    .min-hand {
+      width: 33%;
+      left: calc(33% / 2);
     }
 
   </style>
 
   <script>
-
-
+    const secondHand = document.querySelector('.second-hand'),
+          minuteHand = document.querySelector('.min-hand'),
+            hourHand = document.querySelector('.hour-hand')
+    function setDate() {
+      const now = new Date(),
+      milliseconds = now.getMilliseconds(),
+      seconds = now.getSeconds() + milliseconds / 1000,
+      minutes = now.getMinutes() + seconds / 60,
+      hours = now.getHours() + minutes / 60,
+      secondsDegrees = ((seconds / 60) * 360) + 90,
+      minutesDegrees = ((minutes / 60) * 360) + 90,
+      hoursDegrees = ((hours / 12) * 360) + 90
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`
+      minuteHand.style.transform = `rotate(${minutesDegrees}deg)`
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`
+      requestAnimationFrame(setDate)
+    }
+    requestAnimationFrame(setDate)
   </script>
 </body>
 </html>
