--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -54,7 +54,7 @@
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
     /*
-    
+
     const boulevards = Array.from(
       document.querySelectorAll('.mw-category-group a'))
     .map(i=>i.textContent)
@@ -65,11 +65,9 @@
     */
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-    const sortedByLastName = people.sort((a, b) => {
-      const [aLast, aFirst] = a.split(', ')
-      const [bLast, bFirst] = b.split(', ')
-      return aLast > bLast
-    })
+    const sortedByLastName = people.sort(
+      (a, b) => a.split(', ')[0] > b.split(', ')[0]
+    )
     console.log(sortedByLastName)
     // 8. Reduce Exercise
     // Sum up the instances of each of these
