--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -24,18 +24,31 @@
       { text: 'Nice Nice Nice!', id: 542328 }
     ];
 
+    const olderThan = age => person =>
+      ((new Date).getFullYear() - person.year) >= age
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const someOlder = people.some(olderThan(19))
+    console.log(`There's ${someOlder?'someone':'no one'} 19 or older`)
     // Array.prototype.every() // is everyone 19 or older?
-
+    const everyOlder = people.every(olderThan(19))
+    console.log(`${everyOlder?'E':'Not e'}veryone is 19 or older`)
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
-
+    const commentID = id => comment =>
+      comment.id === id
+    const comment_823423 = comments.find(commentID(823423))
+    console.log(`Comment #${comment_823423.id}: ${comment_823423.text}`)
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
-
+    const commentIndex = comments.findIndex(commentID(823423))
+    const newComments = [
+      ...comments.slice(0,commentIndex),
+      ...comments.slice(commentIndex + 1)
+    ]
+    console.log(newComments)
   </script>
 </body>
 </html>
